[gd_scene load_steps=15 format=3 uid="uid://cx45mucyy5s8k"]

[ext_resource type="Script" path="res://Scripts/Tasks.gd" id="1_vqom6"]
[ext_resource type="Texture2D" uid="uid://dtrop46rbte6k" path="res://resources/images/background/wave pattern.png" id="2_k04hj"]
[ext_resource type="Texture2D" uid="uid://cgt72wc7v4s5j" path="res://resources/images/multiple_choice_Tasks/Frage Fenster2.0.png" id="3_x4vpj"]
[ext_resource type="Texture2D" uid="uid://bdcgqjjjswoi8" path="res://resources/images/common/icons/right.svg" id="4_21dd8"]
[ext_resource type="Texture2D" uid="uid://rt20u5iqsmym" path="res://resources/images/common/pause menu/pause.png" id="4_dkfeo"]
[ext_resource type="Texture2D" uid="uid://kc7dge6tssj8" path="res://resources/images/Tasks/submit button.png" id="4_lejgu"]
[ext_resource type="Texture2D" uid="uid://cufp6jlpu5uh" path="res://resources/images/Tasks/Eingabe_Fenster.png" id="4_wgg4t"]
[ext_resource type="Texture2D" uid="uid://di08uaxmkwkst" path="res://resources/images/common/pause menu/backToIslands.png" id="5_pdomd"]
[ext_resource type="Texture2D" uid="uid://8m68vslnjj7r" path="res://resources/images/buttons/done.png" id="6_paljw"]
[ext_resource type="PackedScene" uid="uid://cu2sqwh1j3cby" path="res://Scenes/pause_menu.tscn" id="6_rar3a"]
[ext_resource type="FontFile" uid="uid://6qcbwyn7t0x3" path="res://resources/images/common/icons/Century-Schoolbook/CENSCBK.TTF" id="11_kttqm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a7ehg"]

[sub_resource type="Theme" id="Theme_k6e5p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hre3g"]

[node name="Tasks" type="Node2D"]
position = Vector2(277, 197)
scale = Vector2(0.523624, 0.550261)
script = ExtResource("1_vqom6")

[node name="Tasks" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 1280.0
offset_bottom = 680.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
auto_translate = false
localize_numeral_system = false

[node name="background" type="TextureRect" parent="Tasks"]
layout_mode = 0
offset_left = -819.29
offset_top = -634.244
offset_right = 1762.71
offset_bottom = 1448.76
mouse_default_cursor_shape = 2
texture = ExtResource("2_k04hj")

[node name="qestion_background" type="TextureRect" parent="Tasks"]
layout_mode = 0
offset_left = -311.0
offset_top = -342.0
offset_right = 1389.0
offset_bottom = 858.0
auto_translate = false
localize_numeral_system = false
texture = ExtResource("3_x4vpj")
expand_mode = 1

[node name="Tipp" type="Label" parent="Tasks"]
layout_mode = 0
offset_left = -9.54883
offset_top = 514.301
offset_right = 818.451
offset_bottom = 646.301
theme_override_colors/font_color = Color(0.544685, 0.318414, 0.130455, 1)
theme_override_fonts/font = ExtResource("11_kttqm")
theme_override_font_sizes/font_size = 26
text = "Tipp :
Runde dein Antwort auf zwei Nachkommastellen!
(z.B 0.235 -> 0.24, 0.133 -> 0.13)"

[node name="inputBackground" type="TextureRect" parent="Tasks"]
layout_mode = 2
offset_left = 204.345
offset_top = 339.839
offset_right = 594.345
offset_bottom = 503.839
scale = Vector2(0.587136, 0.643928)
auto_translate = false
localize_numeral_system = false
texture = ExtResource("4_wgg4t")

[node name="AnswerInput" type="LineEdit" parent="Tasks/inputBackground"]
layout_mode = 2
offset_left = 26.0214
offset_top = 67.7338
offset_right = 342.021
offset_bottom = 147.734
auto_translate = false
localize_numeral_system = false
theme_override_colors/font_color = Color(0.589096, 0.589096, 0.589096, 1)
theme_override_colors/font_placeholder_color = Color(0.458405, 0.458405, 0.458405, 1)
theme_override_font_sizes/font_size = 41
theme_override_styles/normal = SubResource("StyleBoxEmpty_a7ehg")
placeholder_text = "antwort"
alignment = 1
max_length = 11
expand_to_text_length = true
virtual_keyboard_type = 3
clear_button_enabled = true

[node name="SubmitButton" type="TextureButton" parent="Tasks"]
layout_mode = 1
offset_left = 479.0
offset_top = 362.0
offset_right = 727.0
offset_bottom = 459.0
mouse_default_cursor_shape = 2
ignore_texture_size = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="Tasks/SubmitButton"]
layout_mode = 1
offset_left = 4.17109
offset_top = 17.8197
offset_right = 944.171
offset_bottom = 330.82
scale = Vector2(0.25, 0.25)
auto_translate = false
localize_numeral_system = false
mouse_default_cursor_shape = 2
texture = ExtResource("4_lejgu")
expand_mode = 2
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Tasks"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -726.0
offset_top = -340.0
offset_right = 445.0
offset_bottom = -136.0
grow_horizontal = 2
grow_vertical = 2
auto_translate = false
localize_numeral_system = false

[node name="questionText" type="Label" parent="Tasks/VBoxContainer"]
custom_minimum_size = Vector2(600, 200)
layout_mode = 2
size_flags_vertical = 3
auto_translate = false
localize_numeral_system = false
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Question will appear here."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
justification_flags = 139
language = "de"

[node name="doneButton" type="Button" parent="Tasks"]
visible = false
texture_filter = 2
texture_repeat = 1
layout_mode = 0
offset_left = 479.352
offset_top = 586.994
offset_right = 559.352
offset_bottom = 617.994
theme = SubResource("Theme_k6e5p")

[node name="TextureRect" type="TextureRect" parent="Tasks/doneButton"]
layout_mode = 0
offset_left = -152.781
offset_top = -58.1542
offset_right = 391.219
offset_bottom = 95.8458
mouse_default_cursor_shape = 2
texture = ExtResource("6_paljw")

[node name="feedback" type="TextureRect" parent="Tasks"]
layout_mode = 0
offset_left = 781.095
offset_top = 370.733
offset_right = 2281.1
offset_bottom = 1870.74
scale = Vector2(0.05, 0.05)
texture = ExtResource("4_21dd8")

[node name="nextQuestion" type="TextureButton" parent="Tasks"]
visible = false
layout_mode = 0
offset_left = 204.345
offset_top = 601.533
offset_right = 785.345
offset_bottom = 819.533
mouse_default_cursor_shape = 2

[node name="title" type="Label" parent="Tasks"]
layout_mode = 2
offset_left = 403.0
offset_top = -67.0
offset_right = 800.0
offset_bottom = -23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "title"

[node name="questionIndex" type="Label" parent="Tasks"]
layout_mode = 2
offset_left = 876.583
offset_top = -67.2408
offset_right = 998.583
offset_bottom = -23.2408
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "question index"

[node name="Pause" type="Button" parent="."]
offset_left = 1508.72
offset_top = -328.935
offset_right = 1626.72
offset_bottom = -210.935
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_hre3g")
icon = ExtResource("4_dkfeo")

[node name="BackToIslands" type="Button" parent="."]
offset_left = 1508.72
offset_top = -187.184
offset_right = 1626.72
offset_bottom = -69.1839
theme_override_styles/normal = SubResource("StyleBoxEmpty_hre3g")
icon = ExtResource("5_pdomd")

[node name="PauseMenu" parent="." instance=ExtResource("6_rar3a")]
visible = false
offset_left = -567.201
offset_top = -387.089
offset_right = -567.201
offset_bottom = -387.089
scale = Vector2(2, 2)
